# visualise

./: .gitignore  Makefile.am  README  configure.ac
src/: Makefile.am  fake-complex.c  fake-complex.h  fcn-decls.h  fcn-table.h  magick.c  magick.h  parse-utilities.c  parse-utilities.h  vis-lex.l  vis-parse.h  vis-parse.y  vis.c  vis.h
src/tests/: test.ps  test.tif  test.vis  test.vis.~3~  test2.vis  testcpx.vis  testmacro.vis
