AC_INIT([vis], [1.0], [moller@mollerware.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AM_PROG_CC_C_O
AC_CONFIG_HEADERS([config.h])

AM_MAINTAINER_MODE([enable])

AM_PROG_LEX
AC_PROG_YACC

PKG_CHECK_MODULES([CAIRO], [cairo >= 1.13])
AC_SUBST(CAIRO_CFLAGS)
AC_SUBST(CAIRO_LIBS)

PKG_CHECK_MODULES([GTK],   [gtk+-3.0 >= 3.18.8])
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

PKG_CHECK_MODULES([MAGICKWAND],   [MagickWand >= 6.8.6])
AC_SUBST(MAGICKWAND_CFLAGS)
AC_SUBST(MAGICKWAND_LIBS)


AC_CONFIG_FILES([
  Makefile
  src/Makefile
])
AC_OUTPUT
